--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,3 +16,13 @@ header {
     float: right;
     margin: 1%;
 }
+
+
+#typed{
+
+	font-size: 2.5em;
+	color: white;
+	margin-left:2vw;
+	margin-top: 20vh;
+
+}
