--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,25 @@
+@media only screen 
+  and (min-device-width: 834px) 
+  and (max-device-width: 1112px)
+   {
+
+   	body{
+
+   		font-size: 0.7em;
+
+
+   	}
+
+   	img{
+   		width: 75px;
+   		height: 75px;
+
+   	}
+
+}
+
+
+
 body{
 
 	width: 100%;
