--- a/public/css/home.css
+++ b/public/css/home.css
@@ -16,6 +16,40 @@
 
    	}
 
+   	#goButton{
+
+   		font-size: 1em;
+
+   	}
+
+   	h5{
+
+   		font-size: 0.8em;
+   	}
+
+#sign-out-button{
+
+	background-color: black; 
+	color: white; 
+	border: 0; 
+	font-size: 1em; 
+	width: 100%; 
+	height: 5vh;
+}
+
+
+#versus{
+
+	font-size: 1em;
+}
+
+.team-name{
+
+font-size: 1em;
+
+}
+
+
 }
 
 
